# SeniorDesign

RandomForest/RandomForest/: CMakeLists.txt  DollShit.txt  FeatureProjector.cpp  FeatureProjector.h  Forest.cpp  Forest.h  HardDeeperParams.txt  HistogramHelper.cpp  HistogramHelper.h  HistogramMatrix.cpp  HistogramMatrix.h  ITreeNode.cpp  ITreeNode.h  ImageReader.cpp  ImageReader.h  Makefile  MedDeeperParams.txt  MedSuggestParams.txt  MediumTree100F1000.txt  MediumTree100F10002.txt  NodeFactory.cpp  NodeFactory.h  RandomFor.cpp  RandomForest.vcxproj  RandomForest.vcxproj.filters  SegmentationHelper.cpp  SegmentationHelper.h  SerializeHelper.cpp  SerializeHelper.h  TerminalNode.cpp  TerminalNode.h  TrainingTests.cpp  TreeNode.cpp  TreeNode.h  doll7classes.txt  doll7classesReal.txt  doll7classesReal15.txt  dollpoint2.txt  dollpoint215deep.txt  graphvizForest.txt  (+5 more)
RandomForest/RandomForest/DollImages/: cT_rainbow2.mat  dT_rainbow2.mat  pts_rainbow2.mat  rainbow20001s.mat  rainbow20002s.mat  rainbow20003s.mat  rainbow20004s.mat  rainbow20005s.mat  rainbow20006s.mat  rainbow20007s.mat  rainbow20008s.mat  rainbow20009s.mat  rainbow20010s.mat  rainbow20011s.mat  rainbow20012s.mat  rainbow20013s.mat  rainbow20014s.mat  rainbow20015s.mat  rainbow20016s.mat  rainbow20017s.mat  rainbow20018s.mat  rainbow20019s.mat  rainbow20020s.mat  rainbow20021s.mat  rainbow20022s.mat  rainbow20023s.mat  rainbow20024s.mat  rainbow20025s.mat  rainbow20026s.mat  rainbow20027s.mat  rainbow20028s.mat  rainbow20029s.mat  rainbow20030s.mat  rainbow20031s.mat  rainbow20032s.mat  rainbow20033s.mat  (+132 more)
(+404 files in other folders)
